# lisa-data-workshop

./: Oct_10_Towards_a_global_fit_2_2.ipynb  Oct_7_Session_1_Data_Generation.ipynb  Oct_7_Session_2_Data_Analysis.ipynb  Oct_8_Simulation_in_depth_Realistic_simulation.ipynb  Oct_8_Simulation_in_depth_Stochastic_Sky.ipynb  Oct_9_Towards_a_global_fit_1_2.ipynb  pyproject.toml
