[tool.poetry]
name = "lisa-data-workshop"
version = "0.1.0"
description = ""
authors = ["R. Azevedo <rplazevedo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
lisainstrument = "^1.7.3"
pytdi = "^1.3.1"
lisaorbits = "^2.4.2"
numpy = "^2.1.3"
scipy = "^1.14.1"
matplotlib = "^3.9.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
